Manifests/client-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    appName: yolo
    serverClass : client
    memoryOptimised : "yes"
    component: frontend
  annotations:
    description: "Deployment for frontend application"
spec:
  replicas: 1
  selector:
    matchLabels:
      appName : yolo
      memoryOptimised : "yes" 
      app: yoloclient
      component: frontend
  template:
    metadata:
      labels:
        appName : yolo
        memoryOptimised : "yes"
        app: yoloclient
        component: frontend
    spec:
      containers:
        - name: client
          image: chukula/client:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
