Manifests/mongo-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployemnt
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: gcr.io/yoloip4/mongo:1.0.0
        ports:
        - containerPort: 27017
      volumes: 
          - name: mongostorage
            persistentVolumeClaim: 
              claimName: dbpersistentstorage
