Manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-backend-service
spec:
  type: ClusterIP
  selector:
    app: yolobackend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
