Manifests/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yolo-client-service
spec:
  type: ClusterIP
  selector:
    app: yolo-client
  ports:
    - name: http
      port: 80
      targetPort: 3000
