Manifests/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yolo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "gke-static-ip"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          - path: /backend/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
